# up-bank-sdk

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/instructions/: *.instructions.md
.github/workflows/: ai-code-review.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  python-publish.yml  static.yml  tests.yml  trufflehog-scan.yml
docs/: changelog.md  index.md  license.md  llms.txt
docs/api-reference/: client.md  exceptions.md  index.md
docs/api-reference/resources/: accounts.md  attachments.md  categories.md  tags.md  transactions.md  webhooks.md
docs/getting-started/: authentication.md  index.md  installation.md  quickstart.md
docs/guides/: error-handling.md  filtering.md  index.md  pagination.md  webhooks.md
docs/stylesheets/: extra.css
scripts/: test_integration.py
tests/: conftest.py  test_async_pagination.py  test_client.py  test_config.py  test_exceptions.py  test_http_client.py  test_models.py  test_pagination.py
up_bank_sdk/: __init__.py  _protocols.py  async_client.py  client.py  config.py  exceptions.py  paginated.py  paginated_async.py
up_bank_sdk/api/: __init__.py  accounts.py  attachments.py  categories.py  tags.py  transactions.py  util.py  webhooks.py
up_bank_sdk/api/async_api/: __init__.py  accounts.py  attachments.py  categories.py  tags.py  transactions.py  util.py  webhooks.py
up_bank_sdk/http/: __init__.py  async_client.py  sync_client.py
up_bank_sdk/models/: __init__.py  base.py  resources.py
